# bunq_hackaton

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: anthropic_client.py  auth.py  bunq_client.py  config.py  deps.py  dynamo.py  funda.py  image_utils.py  main.py  models.py  number_utils.py  payslip.py  projection.py  prompts.py  requirements.txt  s3.py
backend/agent/: runner.py  system_prompt.py  tools.py
backend/mocks/: transactions.json
backend/mocks/funda_listings/: default.html  demo_425k.html
backend/routers/: onboard.py
backend/routes/: chat.py  onboard.py
backend/storage/: base.py  dynamo_store.py  sqlite_store.py
backend/tests/: test_health.py  test_onboard.py
deploy/: Dockerfile.frontend  deploy.sh  docker-compose.prod.yml  nginx.conf  setup-ec2.sh
frontend/: .env.example  PLAN.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  client.ts  onboard.ts  types.ts
frontend/src/auth/: cognito.ts  useAuth.ts
frontend/src/chat/: ApprovalCard.tsx  AssistantMessage.tsx  ChatView.tsx  Composer.tsx  MessageList.tsx  ToolPill.tsx  UserMessage.tsx  chatStore.ts  useChatStream.ts
frontend/src/components/: Icon.tsx  Markdown.tsx
frontend/src/mocks/: handlers.ts
frontend/src/onboard/: BunqConnect.tsx  FundaInput.tsx  OnboardForm.tsx  PayslipUpload.tsx  PopulatingDashboard.tsx
scripts/: check_balance.py  seed_sandbox.py  smoke.sh  stream_chat.sh
tests/: conftest.py  test_agent.py  test_anthropic_client.py  test_auth.py  test_bunq_sandbox.py  test_chat_routes.py  test_e2e.py  test_funda.py  test_health.py  test_models.py  test_projection.py  test_runner.py  test_storage.py  test_upload_payslip.py
tests/html_fixture/: stevinstraat.html
wiki/: README.md  agent-loop.md  architecture.md  backend-plan.md  data-model.md
(+11 files in other folders)
